fix firefox margin collapse for fb button after share

--- a/boris/media/stylesheets/site.css
+++ b/boris/media/stylesheets/site.css
@@ -888,7 +888,9 @@ fieldset {
     background-image: linear-gradient(top, #3865a4 0%, #315c99 100%);
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 1px 0 rgba(0, 0, 0, 0.1);
     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 1px 0 rgba(0, 0, 0, 0.1);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 1px 0 rgba(0, 0, 0, 0.1); }
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 1px 0 rgba(0, 0, 0, 0.1);
+    margin:0;
+  }
     .button.facebook:after {
       content: " ";
       display: block;
